test git configure

--- a/Dec2024POMSeries/test-output/old/Opencart App Test Regression Suite/methods-alphabetical.html
+++ b/Dec2024POMSeries/test-output/old/Opencart App Test Regression Suite/methods-alphabetical.html
@@ -1,38 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Opencart App Test Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ddbed3">  <td>25/05/17 09:49:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.accPageSetup()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">&gt;&gt;accPageSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="ddbed3">  <td>25/05/17 09:49:18</td>   <td>1457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accPageTitleTest()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">accPageTitleTest</td> 
-  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="ddbed3">  <td>25/05/17 09:49:18</td>   <td>1491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accPageURLTest()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">accPageURLTest</td> 
-  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">&lt;&lt;attachScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="6db6f2">  <td>25/05/17 09:49:17</td>   <td>411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">doLoginTest</td> 
-  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="6db6f2">  <td>25/05/17 09:49:16</td>   <td>29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">forgotPwdLinkExistTest</td> 
-  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="6db6f2">  <td>25/05/17 09:49:17</td>   <td>288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">loginPageTitleTest</td> 
-  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="6db6f2">  <td>25/05/17 09:49:17</td>   <td>363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">loginPageURLTest</td> 
-  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:13</td>   <td>-3706</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:12</td>   <td>-3982</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1843</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@65ef48f2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1582906120</td>   <td></td> </tr>
-<tr bgcolor="8870b2">  <td>25/05/17 09:49:18</td>   <td>1520</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@1e5eb20a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@717560284</td>   <td></td> </tr>
+<tr bgcolor="b3bb9c">  <td>25/05/17 15:01:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.accPageSetup()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">&gt;&gt;accPageSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="b3bb9c">  <td>25/05/17 15:01:41</td>   <td>643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accPageTitleTest()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">accPageTitleTest</td> 
+  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="b3bb9c">  <td>25/05/17 15:01:41</td>   <td>1565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.accPageURLTest()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">accPageURLTest</td> 
+  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:41</td>   <td>1349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:41</td>   <td>1349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:41</td>   <td>1349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:41</td>   <td>1349</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:42</td>   <td>1602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:42</td>   <td>1602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.attachScreenshot(org.testng.ITestResult)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">&lt;&lt;attachScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="af87a9">  <td>25/05/17 15:01:40</td>   <td>352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.doLoginTest()[pri:32767, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">doLoginTest</td> 
+  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="af87a9">  <td>25/05/17 15:01:40</td>   <td>76</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPwdLinkExistTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">forgotPwdLinkExistTest</td> 
+  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="af87a9">  <td>25/05/17 15:01:40</td>   <td>242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">loginPageTitleTest</td> 
+  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="af87a9">  <td>25/05/17 15:01:40</td>   <td>311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageURLTest()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">loginPageURLTest</td> 
+  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:34</td>   <td>-5610</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:34</td>   <td>-5888</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:41</td>   <td>1352</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.LoginPageTest@58a84a12]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1510869126</td>   <td></td> </tr>
+<tr bgcolor="6cb4c3">  <td>25/05/17 15:01:42</td>   <td>1604</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.qa.opencart.tests.AccountsPageTest@6f5d0190]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@219387406</td>   <td></td> </tr>
 </table>
