--- a/Dec2024POMSeries/test-output/index.html
+++ b/Dec2024POMSeries/test-output/index.html
@@ -146,28 +146,6 @@
           <div class="suite-Opencart_App_Test_Regression_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qa.opencart.tests.AccountsPageTest</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="accPageTitleTest">
-                  </a> <!-- accPageTitleTest -->
-                  <span class="method-name">accPageTitleTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="accPageURLTest">
-                  </a> <!-- accPageURLTest -->
-                  <span class="method-name">accPageURLTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Opencart_App_Test_Regression_Suite-class-passed -->
-          <div class="suite-Opencart_App_Test_Regression_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">com.qa.opencart.tests.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -205,6 +183,28 @@
                   <span class="method-name">loginPageURLTest</span>
                   <em>
 (checking login page url)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Opencart_App_Test_Regression_Suite-class-passed -->
+          <div class="suite-Opencart_App_Test_Regression_Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.qa.opencart.tests.AccountsPageTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="accPageTitleTest">
+                  </a> <!-- accPageTitleTest -->
+                  <span class="method-name">accPageTitleTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="accPageURLTest">
+                  </a> <!-- accPageURLTest -->
+                  <span class="method-name">accPageURLTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -279,32 +279,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doLoginTest')
 data.setCell(0, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(0, 3, 1423);
+data.setCell(0, 3, 991);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'forgotPwdLinkExistTest')
-data.setCell(1, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(1, 3, 157);
+data.setCell(1, 1, 'accPageTitleTest')
+data.setCell(1, 2, 'com.qa.opencart.tests.AccountsPageTest')
+data.setCell(1, 3, 917);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginPageTitleTest')
+data.setCell(2, 1, 'forgotPwdLinkExistTest')
 data.setCell(2, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(2, 3, 67);
+data.setCell(2, 3, 111);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginPageURLTest')
+data.setCell(3, 1, 'loginPageTitleTest')
 data.setCell(3, 2, 'com.qa.opencart.tests.LoginPageTest')
-data.setCell(3, 3, 38);
+data.setCell(3, 3, 54);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'accPageTitleTest')
+data.setCell(4, 1, 'accPageURLTest')
 data.setCell(4, 2, 'com.qa.opencart.tests.AccountsPageTest')
-data.setCell(4, 3, 29);
+data.setCell(4, 3, 34);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'accPageURLTest')
-data.setCell(5, 2, 'com.qa.opencart.tests.AccountsPageTest')
-data.setCell(5, 3, 25);
+data.setCell(5, 1, 'loginPageURLTest')
+data.setCell(5, 2, 'com.qa.opencart.tests.LoginPageTest')
+data.setCell(5, 3, 31);
 window.suiteTableData['Opencart_App_Test_Regression_Suite']= { tableData: data, tableDiv: 'times-div-Opencart_App_Test_Regression_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Opencart_App_Test_Regression_Suite">
               </div> <!-- times-div-Opencart_App_Test_Regression_Suite -->
             </div> <!-- times-div -->
@@ -347,79 +347,82 @@ return data;
               <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup(chrome)</span>
-                <span class="method-start">295 ms</span>
+                <span class="method-start">298 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.AccountsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">accPageSetup</span>
-                <span class="method-start">4000 ms</span>
+                <span class="method-start">5908 ms</span>
               </div> <!-- configuration-class before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">forgotPwdLinkExistTest</span>
-                <span class="method-start">4030 ms</span>
+                <span class="method-start">5984 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">attachScreenshot([TestResult name=forgotPwdLinkExistTest status=SUCCESS method=LoginPageTest.forgotPwdLinkExistTest()...)</span>
-                <span class="method-start">4214 ms</span>
+                <span class="method-start">6118 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">loginPageTitleTest</span>
-                <span class="method-start">4289 ms</span>
+                <span class="method-start">6150 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">attachScreenshot([TestResult name=loginPageTitleTest status=SUCCESS method=LoginPageTest.loginPageTitleTest()[pri:0, ...)</span>
-                <span class="method-start">4360 ms</span>
+                <span class="method-start">6209 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">loginPageURLTest</span>
-                <span class="method-start">4364 ms</span>
+                <span class="method-start">6219 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">attachScreenshot([TestResult name=loginPageURLTest status=SUCCESS method=LoginPageTest.loginPageURLTest()[pri:0, inst...)</span>
-                <span class="method-start">4407 ms</span>
+                <span class="method-start">6256 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">doLoginTest</span>
-                <span class="method-start">4412 ms</span>
+                <span class="method-start">6261 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.AccountsPageTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">accPageTitleTest</span>
-                <span class="method-start">5458 ms</span>
+                <span class="method-start">6551 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">attachScreenshot([TestResult name=accPageTitleTest status=SUCCESS method=AccountsPageTest.accPageTitleTest()[pri:0, i...)</span>
-                <span class="method-start">5490 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">accPageURLTest</span>
-                <span class="method-start">5492 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">attachScreenshot([TestResult name=accPageURLTest status=SUCCESS method=AccountsPageTest.accPageURLTest()[pri:0, insta...)</span>
-                <span class="method-start">5519 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-test after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">5521 ms</span>
-              </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.qa.opencart.tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">attachScreenshot([TestResult name=doLoginTest status=SUCCESS method=LoginPageTest.doLoginTest()[pri:32767, instance:c...)</span>
-                <span class="method-start">5841 ms</span>
+                <span class="method-start">7257 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5843 ms</span>
+                <span class="method-start">7259 ms</span>
+              </div> <!-- configuration-test after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.qa.opencart.tests.AccountsPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method after">
+                <span class="method-name">attachScreenshot([TestResult name=accPageTitleTest status=SUCCESS method=AccountsPageTest.accPageTitleTest()[pri:0, i...)</span>
+                <span class="method-start">7470 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">accPageURLTest</span>
+                <span class="method-start">7473 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">attachScreenshot([TestResult name=accPageURLTest status=SUCCESS method=AccountsPageTest.accPageURLTest()[pri:0, insta...)</span>
+                <span class="method-start">7510 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">7512 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
